--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,8 @@
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
+    %link{:href => "https://use.fontawesome.com/releases/v5.9.0/css/all.css", :rel => "stylesheet"}/
+
 
   %body
     -# %p.notice= notice
