--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -3,6 +3,6 @@
     = icon("fas", "arrow-left fa-2x")
     .account-name
       %p= @account
-    = form_with(model: @profile , local: true ) do |f|
-      .profile-img
+    .account-img
+      = image_tag 'Ellipse.png'
         
