画像が投稿できるように実装

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -12,9 +12,11 @@ i {
 }
 
 .profile-img {
-  margin-top: 10%;
+  margin-top: 35px;
   text-align: center;
   img {
-    
+    width: 76.88px;
+    height: 76.88px;
+    border-radius: 50%;
   }
 }
