--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -19,7 +19,13 @@
           - article.images.each do |image|
             = image_tag image
       .article-btn
-        = image_tag 'like.png'
+        - if user_signed_in?
+          - if current_user.has_liked?(article)
+            = link_to article_like_path(article), data: {method: 'delete' } do
+              = image_tag 'active_like.png'
+          - else
+            = link_to article_like_path(article), data: {method: 'post'} do
+              = image_tag 'like.png'
         = image_tag 'comment.png'
         %a{"data-show-count" => "false", :href => "https://twitter.com/share?ref_src=twsrc%5Etfw"}
           = image_tag 'share.png'
