Ajaxでいいねができるように実装

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -40,10 +40,14 @@
     }
     .article-btn {
       margin-bottom: 9px;
+      display: flex;
       img {
         width: 16px;
         height: 16px;
-        margin-right: 6px;
+        margin-right: 10px;
+      }
+      .hidden {
+        display: none;
       }
     }
     .article-content {
