--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -3,7 +3,7 @@
 %br
 
 - @articles.each do |article|
-  .card
+  .card#article-show{data: {article_id: article.id}}
     .card-account
       .card-account-icon
         - if article.author_img.attached?
@@ -20,16 +20,18 @@
             = image_tag image
       .article-btn
         - if user_signed_in?
-          - if current_user.has_liked?(article)
+          .active-heart.hidden
             = link_to article_like_path(article), data: {method: 'delete' } do
               = image_tag 'active_like.png'
-          - else
+          .inactive-heart.hidden
             = link_to article_like_path(article), data: {method: 'post'} do
               = image_tag 'like.png'
-        = image_tag 'comment.png'
-        %a{"data-show-count" => "false", :href => "https://twitter.com/share?ref_src=twsrc%5Etfw"}
-          = image_tag 'share.png'
-        %script{:async => "", :charset => "utf-8", :src => "https://platform.twitter.com/widgets.js"}
+          .article-btn-comment
+            = image_tag 'comment.png'
+          .article-btn-share
+            %a{"data-show-count" => "false", :href => "https://twitter.com/share?ref_src=twsrc%5Etfw"}
+              = image_tag 'share.png'
+          %script{:async => "", :charset => "utf-8", :src => "https://platform.twitter.com/widgets.js"}
       .article-content
         = article.content
 
