--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -20,12 +20,10 @@
             = image_tag image
       .article-btn
         - if user_signed_in?
-          .active-heart.hidden
-            = link_to article_like_path(article), data: {method: 'delete' } do
-              = image_tag 'active_like.png'
-          .inactive-heart.hidden
-            = link_to article_like_path(article), data: {method: 'post'} do
-              = image_tag 'like.png'
+          .active-heart.hidden{id: "#{article.id}"}
+            = image_tag 'active_like.png'
+          .inactive-heart.hidden{id: "#{article.id}"}
+            = image_tag 'like.png'
           .article-btn-comment
             = image_tag 'comment.png'
           .article-btn-share
