--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,5 +1,6 @@
 = link_to 'プロフィール', profile_path
 = link_to 'Articles New', new_article_path
+
 %br
 .cards
   - @articles.each do |article|
@@ -24,12 +25,14 @@
               = image_tag 'active_like.png'
             .inactive-heart.hidden{id: "#{article.id}"}
               = image_tag 'like.png'
-            .article-btn-comment
-              = image_tag 'comment.png'
+            = link_to article_comments_path(article_id: article.id) do
+              .article-btn-comment{id: "#{article.id}"}
+                = image_tag 'comment.png'
             .article-btn-share
               %a{"data-show-count" => "false", :href => "https://twitter.com/share?ref_src=twsrc%5Etfw"}
                 = image_tag 'share.png'
             %script{:async => "", :charset => "utf-8", :src => "https://platform.twitter.com/widgets.js"}
         .article-content
           = article.content
+        = link_to '削除', article_path(article), data: { method: 'delete'}
 
