--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,4 @@
+
 .comments {
   margin-top: 46px;
   
@@ -11,75 +12,82 @@
   }
 
   .comments-container {
-    margin-right: 2.5%;
-    margin-left: 2.5%;
     margin-top: 70px;
     .comment-card {
-      display: flex;
       margin-bottom: 32px;
-      .comment-user-img {
-        margin-right: 14px;
-        img {
-          margin-top: 5px;
-          width: 32px;
-          height: 32px;
-          border-radius: 50%;
-        }
-      }
-      .comment-user {
-        .comment-user-name {
-          font-size: 16px;
-          line-height: 24px;
-          color: #414040;
-          margin-bottom: 6px;
-        }
-        .comment-user-content {
-          font-size: 12px;
-          line-height: 20px;
-          color: #9B9B9B;
-        }
-      }
-    }
-  }
-  
-  .add-comment {
-    position: relative;
-    bottom: 20px;
-    width: 100%;
-    .comment-area {
-      display: flex;
       margin-right: 2.5%;
       margin-left: 2.5%;
-      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
-      padding: 6px;
-    
-      .comment-submit-btn {
-        width: 25px;
-        height: 25px;
-        margin-top: 5px;
-        margin-left: 15px;
-        button {
-          width: 100%;
-          height: 100%;
-          background-color: white;
-          border:none;
-          cursor: pointer;
+      display: flex;
+      .comment-user-img {
+        img {
+          margin-top: 5px;
+          margin-right: 14px;
+          border-radius: 50%;
+          width: 32px;
+          height: 32px;
         }
       }
-      
-      .comment-text-area {
-        text-align: center;
-        width: 100%;
-        height: 40px;
-        textarea {
-          width: 100%;
-          height: 30px;
-          border: none;
+      .comment-user-info {
+        .comment-user-name {
+          margin-bottom: 6px;
+          p {
+            margin: 0;
+            font-size: 16px;
+            line-height: 24px;
+            color: #414040;
+          }
+        }
+        .comment-user-content {
+          p {
+            margin: 0;
+            font-size: 14px;
+            line-height: 20px;
+            color: #9B9B9B;
+          }
         }
       }
     }
-  
   }
+  
+
+}
+.add-comment {
+  margin-top: 200px;
+  margin-bottom: 70px;
+  width: 100%;
+  .comment-area {
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
+    padding: 6px;
+    display: flex;
+    margin-right: 2.5%;
+    margin-left: 2.5%;
+  
+    .comment-submit-btn {
+      width: 25px;
+      height: 25px;
+      margin-top: 5px;
+      margin-left: 15px;
+      button {
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        border:none;
+        cursor: pointer;
+      }
+    }
+    
+    .comment-text-area {
+      text-align: center;
+      width: 100%;
+      height: 40px;
+      textarea {
+        width: 100%;
+        height: 30px;
+        border: none;
+      }
+    }
+  }
+
 }
 
 
