--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -7,11 +7,10 @@
     .card#article-show{data: {article_id: article.id}, class: article.id}
       .card-account
         .card-account-icon
-          - if article.author_img.attached?
-            = image_tag article.author_img
+          = image_tag article.user.author_image
         .card-account-info
           .card-account-info-name
-            = article.author_name
+            = article.user.account_name
           .card-account-info-posttime
             = time_ago_in_words(article.created_at)
       .article
@@ -25,8 +24,8 @@
               = image_tag 'active_like.png'
             .inactive-heart.hidden{id: "#{article.id}"}
               = image_tag 'like.png'
-            = link_to article_comments_path(article_id: article.id) do
-              .article-btn-comment{id: "#{article.id}"}
+            .article-btn-comment{id: "#{article.id}"}
+              = link_to article_path(id: article.id) do
                 = image_tag 'comment.png'
             .article-btn-share
               %a{"data-show-count" => "false", :href => "https://twitter.com/share?ref_src=twsrc%5Etfw"}
