--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,17 +1,12 @@
-.container
-  .profile 
-    .comment-header-back-image
-      = link_to root_path do
-        %i.fas.fa-arrow-left.fa-2x
-    .account-name
-      %p= @user.account_name
-    .profile-img
-      - if @profile&.image.present?
-        = image_tag @profile.image
-      - else 
-        = image_tag 'Ellipse.png'
-      = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
-        = f.file_field :image
-        = f.submit '保存'
-  = link_to 'LOGOUT', destroy_user_session_path, data: {method: 'delete'}
-    
+-# .container
+-#   .profile 
+-#     .comment-header-back-image
+-#       = link_to root_path do
+-#         %i.fas.fa-arrow-left.fa-2x
+-#     .account-name
+-#       %p= @user.account_name
+-#     .profile-img
+-#       - if @profile&.image.present?
+-#         = image_tag @profile.image
+-#       - else 
+-#         = image_tag 'Ellipse.png'
