--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -14,4 +14,5 @@
 = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
   = f.file_field :image
   = f.submit '保存'
+  = render 'commons/counting'
 = render 'commons/articles'
