article model rspec

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,6 +1,6 @@
 .after-login
-  %h1 新規登録完了しました！
+  %h1 New Registration Complete!
   = link_to edit_profile_path do
     .create-profile-link
       = image_tag 'unnamed.png'
-      %p プロフィールを作成する
+      %p Create profile
