--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -6,7 +6,7 @@
     Yuyagram
   .articles-user-image
     = link_to edit_profile_path do
-      - if current_user.profile
+      - if @user.profile
         = image_tag @user.author_image
       - else
         = image_tag 'Ellipse.png'
