--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -69,6 +69,24 @@
       margin: 0;
     }
   }
+  .logout-btn {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    a {
+      text-decoration: none;
+      padding: 8px;
+      font-size: 16px;
+      line-height: 24px;
+      border: 1px solid #000;
+      border-radius: 10px;
+      color: #000;
+    }
+    a:hover {
+      background-color: #000;
+      color: white;
+    }
+  }
   
   .profile-img {
     margin-top: 35px;
@@ -92,5 +110,12 @@
     img {
       width: calc(96% / 3);
     }
+  }
+}
+
+.profile-form {
+  form {
+    text-align: center;
+    margin-top: 25px;
   }
 }
