--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -5,14 +5,16 @@
         %i.fas.fa-arrow-left.fa-2x
     .account-name
       %p= @user.account_name
+    .logout-btn
+      = link_to 'LOGOUT', destroy_user_session_path, data: {method: 'delete'}
     .profile-img
       - if @profile&.image.present?
         = image_tag @profile.image
       - else 
         = image_tag 'Ellipse.png'
-  = link_to 'LOGOUT', destroy_user_session_path, data: {method: 'delete'}
-= form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
-  = f.file_field :image
-  = f.submit '保存'
-  = render 'commons/counting'
+.profile-form
+  = form_with(model: @profile, url: profile_path, method: 'put', local: true) do |f|
+    = f.file_field :image
+    = f.submit '保存'
+    = render 'commons/counting'
 = render 'commons/articles'
